2009-06-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free):
	  Undoing Kimmo's change not to reconfigure hidden windows.
	  Let's do it in h-d.

2009-06-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo for NB#120014.

	* matchbox/core/mb-window-manager.c (mb_wm_focus_client): Mark the
	client focused even if it was destroyed. The focus will be corrected
	when the unmap event comes. Also remove unused return value from the
	function.

	Patch from Laszlo Pere fox NB#117853.

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_destroy): Add NULL
	check to avoid possible crash.

	Revert Thomas' fix for NB#114352, since there should be already 1024
	byte limit (better fix that if it's broken), needs more investigation.

2009-06-03  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client.[ch]: add new function
	mb_wm_client_get_next_focused_app() to return the app next above
	a given client in the focus order.

	* matchbox/theme-engines/mb-wm-theme-png.c: avoid warning about
	unused result of fread().

	Fixes: NB#114352 Unwanted line is displayed in contact starter view

	* matchbox/core/mb-wm-client-window.c: Truncate window titles
	longer than 512 bytes.  If the title is XML, fall back to treating
	it as non-XML, or it won't show.

2009-06-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.[ch]
	(mb_wm_comp_mgr_clutter_set_client_redirection): New function to
	toggle redirection for the compositor's client object.
	(mb_wm_comp_mgr_clutter_client_track_damage): Set the texture window
	to zero when toggling damage tracking off.
	* matchbox/core/mb-window-manager.c (mb_wm_unredirect_client): Update
	Clutter's idea about redirection before changing it in the X side.
	(mb_wm_setup_redirection): Update Clutter's idea about redirection.

2009-06-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
