@@ -298,6 +298,7 @@ typedef enum MBWMAtom
   MBWM_ATOM_HILDON_STACKING_LAYER,
 
   MBWM_ATOM_HILDON_WM_NAME,
+  MBWM_ATOM_HILDON_WM_WINDOW_TYPE_ANIMATION_ACTOR,
 
   MBWM_ATOM_COUNT
 
